correct overflow due to skills slider

--- a/src/components/skills/index.scss
+++ b/src/components/skills/index.scss
@@ -15,6 +15,7 @@
     max-width: 90%;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
     .skill_name {
       display: inline-block;
       > img {
@@ -56,12 +57,23 @@
 }
 
 @media only screen and (max-width: 699px) {
+  .skills {
+  }
   .technologies {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
     &__core,
     &__other {
       > ul {
+        display: flex;
+        flex-direction: column;
         list-style: none;
         text-align: center;
+        justify-content: center;
+        align-items: center;
+        padding-left: 0;
         > h2 {
           color: #c1a3ee;
         }
@@ -70,5 +82,8 @@
         }
       }
     }
+  }
+  .skills__slider {
+    overflow-x: hidden;
   }
 }
